--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-url:jdbc:mysql://pc30093.catalystsolves.com:3306/flyway_demo_prod
+url:jdbc:mysql://127.0.0.1:3306/flyway_demo_prod
 user:lfallon
 password:Raven$1996
 locations:classpath:migrations/
