--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,19 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<user>lfallon</user>
+					<password>Raven$1996</password>
+					<url>jdbc:mysql://127.0.0.1:3306/flyway_demo_prod</url>
+					<locations>
+						<location>classpath:migrations/</location>
+					</locations>
+				</configuration>
+			</plugin>			
 		</plugins>
 	</build>
 </project>
